--- a/blocks/content.css
+++ b/blocks/content.css
@@ -42,8 +42,10 @@
   .content {
     padding-left: 16px;
     padding-right: 16px;
+    padding-top: 40px;
   }
   .content__title {
     font-size: 2rem;
+
   }
 }
