--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,4 +1,4 @@
-.content {
+.content__section-information {
   max-width: 984px;
   margin: auto;
   padding-top: 92px;
@@ -29,7 +29,7 @@
 }
 
 @media screen and (max-width:768px) {
-  .content {
+  .content__section-information {
     padding-left: 24px;
     padding-right: 24px;
   }
@@ -39,13 +39,13 @@
 }
 
 @media screen and (max-width:320px) {
-  .content {
+  .content__section-information {
     padding-left: 16px;
     padding-right: 16px;
-    padding-top: 40px;
+    padding-top: 30px;
   }
+
   .content__title {
     font-size: 2rem;
-
   }
 }
