--- a/blocks/page.css
+++ b/blocks/page.css
@@ -11,3 +11,7 @@ body {
   margin: 0 auto;
   font-family: "Inter Regular", sans-serif;
 }
+
+.shadow {
+  box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.534);
+}
