--- a/pages/index.css
+++ b/pages/index.css
@@ -4,4 +4,6 @@
 @import url(../blocks/nav.css);
 @import url(../blocks/header.css);
 @import url(../blocks/content.css);
+@import url(../blocks/gallery.css);
+@import url(../blocks/cities.css);
 @import url(../blocks/footer.css);
