--- a/blocks/page.css
+++ b/blocks/page.css
@@ -15,3 +15,9 @@ body {
 .shadow {
   box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.534);
 }
+
+@media screen and (max-width: 320px) {
+  .shadow {
+    box-shadow: none;
+  }
+}
