--- a/blocks/cities.css
+++ b/blocks/cities.css
@@ -10,7 +10,12 @@
 .cities__container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 40px;
+  gap: 48px 40px;
+}
+
+.cities__portada {
+  display: flex;
+  gap: 48px;
 }
 
 .cities__title {
@@ -55,4 +60,64 @@
   display: flex;
   flex-direction: column;
   gap: 48px;
+}
+
+@media screen and (max-width: 768px) {
+  .cities {
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+
+  .cities__container {
+    gap: 48px 28px;
+  }
+
+  .cities__image {
+    width: 340px;
+    height: 340px;
+  }
+
+  .cities__title {
+    font-size: 42px;
+  }
+
+  .cities__personal-description {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cities {
+    margin-left: 0;
+    margin-right: 0;
+    padding-top: 60px;
+  }
+
+.cities__container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-left: 16px;
+  margin-right: 16px;
+}
+.cities__portada {
+  margin-left: -16px;
+  margin-right: -16px;
+}
+
+.cities__br {
+  display: none;
+}
+
+  .cities__title {
+    font-size: 2rem;
+  }
+
+  .cities__text-category {
+    font-size: 12px;
+  }
+  .cities__image {
+    width: 300px;
+    height: 300px;
+  }
 }
