--- a/pages/index.css
+++ b/pages/index.css
@@ -7,3 +7,4 @@
 @import url(../blocks/gallery.css);
 @import url(../blocks/cities.css);
 @import url(../blocks/footer.css);
+@import url(../blocks/button.css);
