--- a/blocks/button.css
+++ b/blocks/button.css
@@ -1,4 +1,4 @@
-.button__little-screen {
+.button_little-screen {
   display: none;
 }
 
@@ -10,6 +10,7 @@
   font-weight: 600;
   border-radius: 4px;
   border: none;
+  box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.534);
 }
 
 .button:hover {
@@ -21,10 +22,10 @@
 }
 
 @media screen and (max-width: 320px) {
-  .button__big-screen {
+  .button_big-screen {
     display: none;
   }
-  .button__little-screen {
+  .button_little-screen {
     display: inline-block;
   }
   .button {
