--- a/blocks/cities.css
+++ b/blocks/cities.css
@@ -61,7 +61,9 @@
   flex-direction: column;
   gap: 48px;
 }
-
+.cities__image {
+  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
+}
 @media screen and (max-width: 768px) {
   .cities {
     margin-left: 24px;
@@ -93,21 +95,21 @@
     padding-top: 60px;
   }
 
-.cities__container {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-left: 16px;
-  margin-right: 16px;
-}
-.cities__portada {
-  margin-left: -16px;
-  margin-right: -16px;
-}
+  .cities__container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+  .cities__portada {
+    margin-left: -16px;
+    margin-right: -16px;
+  }
 
-.cities__br {
-  display: none;
-}
+  .cities__br {
+    display: none;
+  }
 
   .cities__title {
     font-size: 2rem;
