--- a/blocks/header.css
+++ b/blocks/header.css
@@ -23,6 +23,10 @@
   font-size: 1.875rem;
 }
 
+.header__front-image {
+  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
+}
+
 @media screen and (max-width:768px) {
   .header__text {
     padding-left: 24px;
