--- a/blocks/button.css
+++ b/blocks/button.css
@@ -3,18 +3,19 @@
 }
 
 .button {
-  background-image: linear-gradient(90deg, #0278fe 0%, #003a7b 100%);
+
   width: 289px;
   height: 48px;
   color: white;
   font-weight: 600;
   border-radius: 4px;
   border: none;
-  box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.534);
+  background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
+  box-shadow: 5px 5px 10px #00000040;
 }
 
 .button:hover {
-  background-image: linear-gradient(
+  background: linear-gradient(
     90deg,
     rgba(2, 120, 254, 0.25) 0%,
     rgba(0, 58, 123, 0.25) 99.98%
