--- a/blocks/cities.css
+++ b/blocks/cities.css
@@ -59,7 +59,7 @@
   gap: 48px;
 }
 .cities__image {
-  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 5px 5px 10px #00000040;
 }
 @media screen and (max-width: 768px) {
   .cities {
