--- a/blocks/header.css
+++ b/blocks/header.css
@@ -24,7 +24,7 @@
 }
 
 .header__front-image {
-  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 5px 5px 10px #00000040;
 }
 
 @media screen and (max-width:768px) {
